[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/images/kenney_background-elements-redux/Backgrounds/backgroundCastles.png" type="Texture" id=1]
[ext_resource path="res://assets/images/KiriFont.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Play1.gd" type="Script" id=3]
[ext_resource path="res://LevelSelect.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/ButtonClick.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/images/GreenGrovesMenu.png" type="Texture" id=6]
[ext_resource path="res://assets/images/AshApocalypseMenu.png" type="Texture" id=7]
[ext_resource path="res://Play2.gd" type="Script" id=8]
[ext_resource path="res://QuitLevelSelect.gd" type="Script" id=9]
[ext_resource path="res://assets/images/DireDepthsMenu.png" type="Texture" id=10]
[ext_resource path="res://Play3.gd" type="Script" id=11]
[ext_resource path="res://LevelImage3.gd" type="Script" id=12]
[ext_resource path="res://LevelImage2.gd" type="Script" id=13]
[ext_resource path="res://LevelImage1.gd" type="Script" id=14]
[ext_resource path="res://LevelUnlockText.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = 3
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fadeAway"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
texture = ExtResource( 1 )

[node name="Play1" type="Button" parent="."]
margin_left = 190.0
margin_top = 290.0
margin_right = 290.0
margin_bottom = 316.0
rect_scale = Vector2( 1.75, 1.75 )
focus_neighbour_left = NodePath("../QuitLevelSelect")
focus_neighbour_right = NodePath("../Play2")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.807843, 0.835294, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.823529, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.137255, 0.129412, 0.129412, 1 )
custom_fonts/font = SubResource( 1 )
text = "SELECt"
script = ExtResource( 3 )

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SelectLevelTitle" type="Label" parent="."]
margin_left = 245.0
margin_top = 13.0
margin_right = 385.0
margin_bottom = 30.0
rect_scale = Vector2( 3.8, 3.8 )
custom_fonts/font = SubResource( 2 )
text = "SELECT LEVEL"

[node name="LevelTitle1" type="Label" parent="."]
margin_left = 145.0
margin_top = 85.0
margin_right = 297.0
margin_bottom = 102.0
rect_scale = Vector2( 1.75, 1.75 )
custom_fonts/font = SubResource( 2 )
text = "GREEN GROVES"

[node name="LevelImage1" type="TextureRect" parent="."]
margin_left = 133.0
margin_top = 118.0
margin_right = 2053.0
margin_bottom = 1198.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )
stretch_mode = 7
script = ExtResource( 14 )

[node name="LevelTitle2" type="Label" parent="."]
margin_left = 565.0
margin_top = 85.0
margin_right = 750.0
margin_bottom = 102.0
rect_scale = Vector2( 1.75, 1.75 )
custom_fonts/font = SubResource( 2 )
text = "ASH APOCALYPSE"

[node name="LevelImage2" type="TextureRect" parent="."]
margin_left = 588.0
margin_top = 118.0
margin_right = 2508.0
margin_bottom = 1198.0
rect_scale = Vector2( 0.14, 0.15 )
texture = ExtResource( 7 )
stretch_mode = 7
script = ExtResource( 13 )

[node name="Play2" type="Button" parent="."]
margin_left = 635.0
margin_top = 290.0
margin_right = 735.0
margin_bottom = 316.0
rect_scale = Vector2( 1.75, 1.75 )
focus_neighbour_left = NodePath("../Play1")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.807843, 0.835294, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.823529, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.137255, 0.129412, 0.129412, 1 )
custom_fonts/font = SubResource( 1 )
text = "SELECt"
script = ExtResource( 8 )

[node name="QuitLevelSelect" type="Button" parent="."]
margin_left = 15.0
margin_top = 550.0
margin_right = 115.0
margin_bottom = 576.0
rect_scale = Vector2( 1.4, 1.4 )
focus_neighbour_top = NodePath("../Play1")
focus_neighbour_right = NodePath("../Play1")
custom_colors/font_color_focus = Color( 0.901961, 0.85098, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 0.905882, 0.917647, 0.0627451, 1 )
custom_colors/font_color_pressed = Color( 0.176471, 0.164706, 0.164706, 1 )
custom_fonts/font = SubResource( 3 )
text = "BACK"
script = ExtResource( 9 )

[node name="LevelTitle3" type="Label" parent="."]
margin_left = 375.0
margin_top = 340.0
margin_right = 507.0
margin_bottom = 357.0
rect_scale = Vector2( 1.75, 1.75 )
custom_colors/font_color = Color( 1, 0.992157, 0.992157, 1 )
custom_colors/font_outline_modulate = Color( 0.0117647, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.160784 )
custom_fonts/font = SubResource( 2 )
text = "DIRE DEPTHS"

[node name="LevelImage3" type="TextureRect" parent="."]
margin_left = 350.0
margin_top = 373.0
margin_right = 2270.0
margin_bottom = 1453.0
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 10 )
stretch_mode = 7
script = ExtResource( 12 )

[node name="Play3" type="Button" parent="."]
margin_left = 400.0
margin_top = 545.0
margin_right = 500.0
margin_bottom = 571.0
rect_scale = Vector2( 1.75, 1.75 )
focus_neighbour_left = NodePath("../Play1")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.807843, 0.835294, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.823529, 0.054902, 1 )
custom_colors/font_color_pressed = Color( 0.137255, 0.129412, 0.129412, 1 )
custom_fonts/font = SubResource( 1 )
text = "SELECt"
script = ExtResource( 11 )

[node name="LevelUnlockText" type="RichTextLabel" parent="."]
margin_left = 11.0
margin_top = 447.0
margin_right = 206.0
margin_bottom = 505.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/default_color = Color( 0.984314, 0.972549, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.388235 )
custom_fonts/normal_font = SubResource( 4 )
text = "YOU HAVEN\"T UNLOCKED THIS LEVEL YET..."
script = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelUnlockText"]
anims/RESET = SubResource( 5 )
anims/fadeAway = SubResource( 6 )

[connection signal="pressed" from="Play1" to="Play1" method="_on_Play1_pressed"]
[connection signal="pressed" from="Play2" to="Play2" method="_on_Play2_pressed"]
[connection signal="pressed" from="Play2" to="LevelUnlockText" method="_on_Play2_pressed"]
[connection signal="pressed" from="QuitLevelSelect" to="QuitLevelSelect" method="_on_QuitLevelSelect_pressed"]
[connection signal="pressed" from="Play3" to="Play3" method="_on_Play3_pressed"]
[connection signal="pressed" from="Play3" to="LevelUnlockText" method="_on_Play3_pressed"]
[connection signal="animation_finished" from="LevelUnlockText/AnimationPlayer" to="LevelUnlockText" method="_on_AnimationPlayer_animation_finished"]
